# more.next

./: .flake8  CHANGES.rst  LICENSE.txt  MANIFEST.in  README.rst  develop_requirements.txt  pyproject.toml
.github/workflows/: main.yml
more/next/: __init__.py  app.py
more/next/tests/: test_next.py
