[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "more.next"
version = "0.1.2"
dynamic = ["readme"]
description = "NextORM integration in Morepath"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
authors = [{name = "Henri Hulski", email = "henri@sancode.it"}]
keywords = ["NextORM", "morepath", "PonyORM", ": Next[orm]"]
classifiers = [
    "Intended Audience :: Developers",
    "Environment :: Web Environment",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 3 - Alpha",
]
requires-python = ">= 3.12"
dependencies = [
    "morepath",
    "nextorm",
]

[project.urls]
Documentation = "https://github.com/morepath/more.next/blob/master/README.md"
Repository = "https://github.com/morepath/more.next"
Issues = "https://github.com/morepath/more.next/issues"
Changelog = "https://github.com/morepath/more.next/blob/master/CHANGES.txt"

[project.optional-dependencies]
test = ["pytest >= 8", "WebTest >= 2.0.14", "pytest-env"]
coverage = ["pytest-cov"]
lint = ["black", "flake8", "isort"]

[tool.setuptools.packages.find]
where = ["."]
include = ["more*"]
namespaces = true 

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CHANGES.txt"]}

[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--import-mode=importlib",
]
pythonpath = ["."]
env = ["RUN_ENV=test"]

[tool.coverage.run]
omit = ["more/next/tests/*"]
source = ["more.next"]

[tool.coverage.report]
show_missing = true

[tool.tox]
requires = ["tox>=4"]
env_list = [
    "py312",
    "py313",
    "py314",
    "coverage",
    "lint",
]
skip_missing_interpreters = true

[tool.tox.env_run_base]
package = "editable"
extras = ["test"]
commands = [["pytest", "{posargs:more/next}"]]

[tool.tox.env.coverage]
base_python = ["python3.13"]
extras = ["test", "coverage"]
commands = [
    ["pytest", "--cov", "--cov-fail-under=99", "{posargs:more/next}"],
]

[tool.tox.env.lint]
base_python = ["python3.13"]
extras = ["lint"]
commands = [
    ["flake8", "more/next"],
    ["black", "--check", "--diff", "--color", "."],
    ["isort", "--diff", "."],
]

[tool.black]
line-length = 88
target-version = ['py312', 'py313', 'py314']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.git
    | \.tox
    | env
    | venv
    | .venv
    | __pycache__
    | build
    | dist
    | src
  )/
)
'''

[tool.isort]
profile = 'black'
py_version = 313
skip_gitignore = true
